--- a/p8105_hw6_xs2569.Rmd
+++ b/p8105_hw6_xs2569.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(dplyr)
 library(tidyr)
 library(purrr)
+library(modelr)
 library(forcats)
 library(ggplot2)
 library(tidyverse)
@@ -17,9 +18,12 @@ library(broom)
 library(ggridges)
 library(dplyr)
 set.seed(1)
+library(rvest)
+library(mgcv)
+library("SemiPar")
 ```
 
-### Problem 2
+### Problem 2 Homicide data
 ```{r homicide dataset, warning=FALSE}
 raw_homicide = read.csv("./data/homicide-data.csv")
 
@@ -49,8 +53,10 @@ view(washington_df)
 
 
 ```{r}
+baltimore_data = washington_df %>% 
+  filter(city_state == "Baltimore, MD")
 fit_logistic = 
-  washington_df |> 
+  baltimore_data |> 
   glm(solved ~ victim_sex + victim_race + victim_age, data = _, family = binomial()) 
 
 fit_logistic |> 
@@ -111,3 +117,141 @@ nest_glm_city_state |>
 The plot highlights the variety of confidence interval widths, with wider intervals occurring at the lower and higher OR values. 
 It also makes it evident that around half of the ORs have confidence intervals that include the null value of 1, indicating that though almost all estimates are greater than 1, they are not all statistically significant. 
 
+
+### Problem 3
+```{r}
+#loading csv
+raw_birthweight_df = read.csv(file = "./data/birthweight.csv")
+
+#viewing variables
+head(raw_birthweight_df)
+view(raw_birthweight_df)
+```
+
+```{r}
+birthweight_df = raw_birthweight_df |>
+  mutate(
+    mrace = 
+      case_match(mrace,
+        1 ~ "White", 
+        2 ~ "Black", 
+        3 ~ "Asian",
+        4 ~ "Puerto Rican",
+        8 ~ "Other"),
+    babysex = 
+      case_match(babysex,
+        1 ~ "Male",
+        2 ~ "Female"),
+    frace = 
+      case_match(frace,
+        1 ~ "White", 
+        2 ~ "Black", 
+        3 ~ "Asian",
+        4 ~ "Puerto Rican",
+        8 ~ "Other",
+        9 ~ "Unknown")
+  ) |>
+  drop_na() |>
+  mutate(
+    babysex = as.factor(babysex),
+    blength = as.numeric(blength),
+    ppwt = as.numeric(ppwt))
+
+str(birthweight_df)
+```
+
+```{r}
+birthweight_df = as.data.frame(birthweight_df)
+birthweight_fit = 
+  birthweight_df |>
+  lm(bwt ~ babysex + gaweeks + ppwt + blength + blength*gaweeks, data =_)
+
+birthweight_fit |> 
+  broom::tidy() |> 
+  mutate(
+    OR = exp(estimate),
+    CI_upper = exp((estimate) + 1.96*(std.error)),
+    CI_lower = exp((estimate) - 1.96*(std.error))) |>
+  select(term, log_OR = estimate, OR, p.value, CI_upper, CI_lower) |> 
+  knitr::kable(digits = 3)
+```
+
+```{r}
+birthweight_df <- birthweight_df |> 
+  add_predictions(birthweight_fit) |>  
+  add_residuals(birthweight_fit)|>
+  mutate(type = 
+           if_else(!is.na(resid), "Residual", "Prediction"))
+
+birthweight_df |>
+  ggplot(aes(y=resid, x=pred)) +
+    geom_point() +
+  labs(
+    title = "Predictions vs Residuals for Proposed Model",
+    x = "Predictions",
+    y = "Residuals")
+```
+
+```{r}
+length_age_fit = 
+  birthweight_df |>
+  lm(bwt ~ gaweeks + blength, data =_)
+
+length_age_fit |> 
+  broom::tidy() |> 
+  mutate(
+    OR = exp(estimate),
+    CI_upper = exp((estimate) + 1.96*(std.error)),
+    CI_lower = exp((estimate) - 1.96*(std.error))) |>
+  select(term, log_OR = estimate, OR, p.value, CI_upper, CI_lower) |> 
+  knitr::kable(digits = 3)
+```
+
+```{r}
+interaction_fit = 
+  birthweight_df |>
+  lm(bwt ~ bhead + blength + babysex + babysex*blength + babysex*bhead + blength*bhead + blength*bhead*babysex, data =_)
+
+interaction_fit |> 
+  broom::tidy() |> 
+  mutate(
+    OR = exp(estimate),
+    CI_upper = exp((estimate) + 1.96*(std.error)),
+    CI_lower = exp((estimate) - 1.96*(std.error))) |>
+  select(term, log_OR = estimate, OR, p.value, CI_upper, CI_lower) |> 
+  knitr::kable(digits = 3)
+```
+
+```{r}
+cv_df =
+  crossv_mc(birthweight_df, 100) |> 
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble))
+```
+
+```{r}
+cv_df = 
+  cv_df |> 
+  mutate(
+    birthweight_fit= map(train, \(df) lm(bwt ~ babysex + gaweeks + ppwt + blength + blength*gaweeks, data = df)),
+    length_age_fit= map(train, \(df) lm(bwt ~ gaweeks + blength, data = df)),
+    interaction_fit  = map(train, \(df) gam(bwt ~ bhead + blength + babysex + babysex*blength + babysex*bhead + blength*bhead + blength*bhead*babysex, data = as_tibble(df)))) |> 
+  mutate(
+    rmse_birthweight = map2_dbl(birthweight_fit, test, \(mod, df) rmse(model = mod, data = df)),
+    rmse_lenght_age = map2_dbl(length_age_fit, test, \(mod, df) rmse(model = mod, data = df)),
+    rmse_interaction = map2_dbl(interaction_fit, test, \(mod, df) rmse(model = mod, data = df)))
+```
+
+```{r}
+cv_df |> 
+  select(starts_with("rmse")) |> 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") |> 
+  mutate(model = fct_inorder(model)) |> 
+  ggplot(aes(x = model, y = rmse)) + geom_violin()
+```
+Model with interaction terms (including three level interaction) has a little more predictive accuracy. 
