--- a/p8105_hw6_xs2569.md
+++ b/p8105_hw6_xs2569.md
@@ -75,10 +75,10 @@ fit_logistic |>
 | victim_raceWhite |  0.842 | 2.320 |   0.000 |    3.268 |    1.648 |
 | victim_age       | -0.007 | 0.993 |   0.043 |    1.000 |    0.987 |
 
-The odds of a homicide being solved when the victim was a male was 1.661
-(95% CI: 1.567, 1.760) times the odds of a homicide being solved when
-the victim was a female, controlling for the victim’s age and race. The
-beta estimate for this adjusted odds ratio is 0.507.
+The odds of a homicide of Baltimore being solved when the victim was a
+male was 2.35 (95% CI: 3.081, 1.793) times the odds of a homicide being
+solved when the victim was a female, controlling for the victim’s age
+and race. The beta estimate for this adjusted odds ratio is 0.580.
 
 ``` r
 nest_glm_city_state =
