--- a/p8105_hw6_xs2569.md
+++ b/p8105_hw6_xs2569.md
@@ -51,6 +51,8 @@ washington_df = raw_homicide |>
 view(washington_df)
 ```
 
+\####Baltimore, MD
+
 ``` r
 baltimore_data = washington_df %>% 
   filter(city_state == "Baltimore, MD")
@@ -76,9 +78,15 @@ fit_logistic |>
 | victim_age       | -0.007 | 0.993 |   0.043 |    1.000 |    0.987 |
 
 The odds of a homicide of Baltimore being solved when the victim was a
-male was 2.35 (95% CI: 3.081, 1.793) times the odds of a homicide being
-solved when the victim was a female, controlling for the victim’s age
-and race. The beta estimate for this adjusted odds ratio is 0.580.
+male was 2.35, which is significant with the interval (95% CI: 3.081,
+1.793) times the odds of a homicide being solved when the victim was a
+female, controlling for the victim’s age and race. The beta estimate for
+this adjusted odds ratio is 0.580 which means the odds of solving a
+homicide are 0.580 (or 58%) of the odds at a hypothetical baseline of 1,
+given: the victim is male (reference level for victim_sex), the victim
+is Black (reference level for victim_race) and the victim’s age is at 0.
+
+#### Each of the cities
 
 ``` r
 nest_glm_city_state =
@@ -90,6 +98,7 @@ nest_glm_city_state =
   select(-data, -models) |> 
   unnest(results)
 
+## Because the sample is large enough, we use normal disturbution and 1.96 to generate CI
 nest_glm_city_state |> 
   select(term, estimate, city_state, std.error, p.value) |>
   mutate(
@@ -176,10 +185,13 @@ nest_glm_city_state |>
 
 ![](p8105_hw6_xs2569_files/figure-gfm/unnamed-chunk-4-1.png)<!-- --> The
 plot highlights the variety of confidence interval widths, with wider
-intervals occurring at the lower and higher OR values. It also makes it
-evident that around half of the ORs have confidence intervals that
-include the null value of 1, indicating that though almost all estimates
-are greater than 1, they are not all statistically significant.
+intervals occurring at the lower and higher OR values. From the plot we
+can see all of the intervals contain the point 1.0 and there isn’t any
+one of the upper level less than 1.0 but some of the intervals have the
+lower level higher than 1.0. It also makes it evident that around half
+of the ORs have confidence intervals that include the null value of 1,
+indicating that though almost all estimates are greater than 1, they are
+not all statistically significant.
 
 ### Problem 3
 
@@ -209,6 +221,8 @@ head(raw_birthweight_df)
 ``` r
 view(raw_birthweight_df)
 ```
+
+#### Load and clean the data
 
 ``` r
 birthweight_df = raw_birthweight_df |>
@@ -269,7 +283,34 @@ birthweight_df = as.data.frame(birthweight_df)
 birthweight_fit = 
   birthweight_df |>
   lm(bwt ~ babysex + gaweeks + ppwt + blength + blength*gaweeks, data =_)
+summary(birthweight_fit)
+```
 
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ babysex + gaweeks + ppwt + blength + blength * 
+    ##     gaweeks, data = birthweight_df)
+    ## 
+    ## Residuals:
+    ##     Min      1Q  Median      3Q     Max 
+    ## -1586.7  -214.5   -10.6   203.8  4021.5 
+    ## 
+    ## Coefficients:
+    ##                   Estimate Std. Error t value Pr(>|t|)    
+    ## (Intercept)     -7902.0146   747.0344 -10.578  < 2e-16 ***
+    ## babysexMale        21.1593    10.1091   2.093   0.0364 *  
+    ## gaweeks           117.7964    19.6231   6.003 2.10e-09 ***
+    ## ppwt                1.9145     0.2516   7.609 3.36e-14 ***
+    ## blength           196.5938    15.3582  12.801  < 2e-16 ***
+    ## gaweeks:blength    -1.8609     0.4016  -4.634 3.70e-06 ***
+    ## ---
+    ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+    ## 
+    ## Residual standard error: 330.3 on 4336 degrees of freedom
+    ## Multiple R-squared:  0.5846, Adjusted R-squared:  0.5841 
+    ## F-statistic:  1220 on 5 and 4336 DF,  p-value: < 2.2e-16
+
+``` r
 birthweight_fit |> 
   broom::tidy() |> 
   mutate(
@@ -311,7 +352,30 @@ birthweight_df |>
 length_age_fit = 
   birthweight_df |>
   lm(bwt ~ gaweeks + blength, data =_)
+summary(length_age_fit)
+```
 
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ gaweeks + blength, data = birthweight_df)
+    ## 
+    ## Residuals:
+    ##     Min      1Q  Median      3Q     Max 
+    ## -1709.6  -215.4   -11.4   208.2  4188.8 
+    ## 
+    ## Coefficients:
+    ##              Estimate Std. Error t value Pr(>|t|)    
+    ## (Intercept) -4347.667     97.958  -44.38   <2e-16 ***
+    ## gaweeks        27.047      1.718   15.74   <2e-16 ***
+    ## blength       128.556      1.990   64.60   <2e-16 ***
+    ## ---
+    ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+    ## 
+    ## Residual standard error: 333.2 on 4339 degrees of freedom
+    ## Multiple R-squared:  0.5769, Adjusted R-squared:  0.5767 
+    ## F-statistic:  2958 on 2 and 4339 DF,  p-value: < 2.2e-16
+
+``` r
 length_age_fit |> 
   broom::tidy() |> 
   mutate(
@@ -332,7 +396,37 @@ length_age_fit |>
 interaction_fit = 
   birthweight_df |>
   lm(bwt ~ bhead + blength + babysex + babysex*blength + babysex*bhead + blength*bhead + blength*bhead*babysex, data =_)
+summary(interaction_fit)
+```
 
+    ## 
+    ## Call:
+    ## lm(formula = bwt ~ bhead + blength + babysex + babysex * blength + 
+    ##     babysex * bhead + blength * bhead + blength * bhead * babysex, 
+    ##     data = birthweight_df)
+    ## 
+    ## Residuals:
+    ##      Min       1Q   Median       3Q      Max 
+    ## -1132.99  -190.42   -10.33   178.63  2617.96 
+    ## 
+    ## Coefficients:
+    ##                             Estimate Std. Error t value Pr(>|t|)    
+    ## (Intercept)                -801.9487  1102.3077  -0.728 0.466948    
+    ## bhead                       -16.5975    34.0916  -0.487 0.626388    
+    ## blength                     -21.6460    23.3720  -0.926 0.354421    
+    ## babysexMale               -6374.8684  1677.7669  -3.800 0.000147 ***
+    ## blength:babysexMale         123.7729    35.1185   3.524 0.000429 ***
+    ## bhead:babysexMale           198.3932    51.0917   3.883 0.000105 ***
+    ## bhead:blength                 3.3244     0.7126   4.666 3.17e-06 ***
+    ## bhead:blength:babysexMale    -3.8781     1.0566  -3.670 0.000245 ***
+    ## ---
+    ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+    ## 
+    ## Residual standard error: 287.7 on 4334 degrees of freedom
+    ## Multiple R-squared:  0.6849, Adjusted R-squared:  0.6844 
+    ## F-statistic:  1346 on 7 and 4334 DF,  p-value: < 2.2e-16
+
+``` r
 interaction_fit |> 
   broom::tidy() |> 
   mutate(
